A small change to my website

--- a/site/site.html
+++ b/site/site.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Piece of text</h1>
+<h1>Piece of text. This is the first webpage I do.</h1>
 </body>
 </html>
