Another little change

--- a/site/site.html
+++ b/site/site.html
@@ -4,6 +4,7 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Piece of text. This is the first webpage I do.</h1>
+<h1>Piece of text. This is the first webpage I do.
+I will add small changes over time.</h1>
 </body>
 </html>
